# Url-Shortener

./: .gitignore  Dockerfile  README.md  docker-compose-local.yml
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024-04-25-04-39_08b97f8330d2_initialize_tables.py
backend/app/: deps.py  models.py  repositories.py  routers.py  schemas.py
backend/app/core/: config.py  db.py  logger.py  utils.py
backend/app/core/exceptions/: __init__.py  bad_request.py  base_exception.py  forbidden.py  internal_server_error.py  not_found.py  not_implemented.py  service_unavailable.py  too_many_requests.py  unauthorized.py
backend/app/core/middleware/: rate_limiter.py
backend/app/core/responses/: __init__.py  bad_request.py  forbidden.py  internal_server_error.py  not_found.py  not_implemented.py  service_unavailable.py  too_many_requests.py  unauthorized.py
backend/app/web/: application.py  gunicorn_runner.py  lifetime.py
backend/scripts/: alembic.bat
frontend/templates/: header.html  index.html
frontend/templates/pages/: url-preview.html
frontend/templates/pages/errors/: InternalServerError.html  NotFound.html
frontend/templates/static/css/: style.css
frontend/templates/static/js/: script.js
